--- a/outils_numeriques_presentation.ipynb
+++ b/outils_numeriques_presentation.ipynb
@@ -470,7 +470,7 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "import scipy as sp\n",
+    "import numpy as np\n",
     "import scipy.integrate as spi\n",
     "\n",
     "### Résolution de l'équation différentielle du/dt+a.u^2=b\n",
@@ -488,7 +488,7 @@
     "    return(-a*u**2+b)\n",
     "\n",
     "# Définition de la liste des temps\n",
-    "liste_t=sp.linspace(0,duree,N)\n",
+    "liste_t=np.linspace(0,duree,N)\n",
     "\n",
     "# Résolution numérique\n",
     "sol=spi.odeint(f,u0,liste_t)\n",
@@ -521,7 +521,7 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "import scipy as sp\n",
+    "import numpy as np\n",
     "import scipy.integrate as spi\n",
     "\n",
     "### Résolution de l'équation différentielle d^2u/dt^2+a.du/dt+b.u^2=c\n",
@@ -542,7 +542,7 @@
     "    return([-a*dudt-b*u**2+c,dudt])\n",
     "\n",
     "# Définition de la liste des temps\n",
-    "liste_t=sp.linspace(0,duree,N)\n",
+    "liste_t=np.linspace(0,duree,N)\n",
     "\n",
     "# Résolution numérique\n",
     "sol=spi.odeint(f,[dudt0,u0],liste_t)\n",
