--- a/outils_numeriques_presentation.ipynb
+++ b/outils_numeriques_presentation.ipynb
@@ -351,7 +351,7 @@
     "\\dfrac{\\mathrm{d}^2 u}{\\mathrm{d}t^2}+a \\cdot \\dfrac{\\mathrm{d} u}{\\mathrm{d}t}+b \\cdot u^2=c\n",
     "$$\n",
     "\n",
-    "il est commode d'introduire la grandeur dérivée $\\dfrac{\\mathrm{d} u}{\\mathrm{d}t$, ce qui revient alors à résoudre numériquement deux équations, ce qui donne par discrétisation :\n",
+    "il est commode d'introduire la grandeur dérivée $\\dfrac{\\mathrm{d} u}{\\mathrm{d}t}$, ce qui revient alors à résoudre numériquement deux équations, ce qui donne par discrétisation :\n",
     "\n",
     "$$\n",
     "\\boxed{u_{n+1}=u_n+\\mathrm{d}t \\cdot \\left. \\dfrac{\\mathrm{d} u}{\\mathrm{d}t} \\right|_n}\n",
