--- a/outils_numeriques_presentation.ipynb
+++ b/outils_numeriques_presentation.ipynb
@@ -383,7 +383,7 @@
     "# Paramètres de la résolution numérique\n",
     "N=2000 # Nombre de points de la résolution numérique\n",
     "duree=1.2 # Durée totale\n",
-    "dt=duree/N # Pas de la résolution numérique\n",
+    "dt=duree/(N-1) # Pas de la résolution numérique\n",
     "\n",
     "# Définition des listes\n",
     "liste_u=[u0]\n",
@@ -431,7 +431,7 @@
     "# Paramètres de la résolution numérique\n",
     "N=2000 # Nombre de points de la résolution numérique\n",
     "duree=1.2 # Durée totale\n",
-    "dt=duree/N # Pas de la résolution numérique\n",
+    "dt=duree/(N-1) # Pas de la résolution numérique\n",
     "\n",
     "# Définition des listes et de la valeur initiale de la dérivée du/dt\n",
     "liste_u=[u0]\n",
