--- a/outils_numeriques_presentation.ipynb
+++ b/outils_numeriques_presentation.ipynb
@@ -249,21 +249,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Estimer et représenter graphiquement l'incertitude sur chaque mesure\n",
-    "Chaque mesure possède une incertitude qu'il faut évaluer.\n",
-    "> Ne pas confondre l'incertitude associée à une mesure avec la résolution de l'appareil de mesure :\n",
-    "> - l'incertitude est une estimation du plus grand écart possible entre la valeur mesurée et une valeur << vraie >> (cette notion de valeur vraie est sujette à développements) ;\n",
+    "# Estimer et représenter graphiquement l'incertitude-type sur chaque mesure\n",
+    "Chaque mesure possède une incertitude-type qu'il faut évaluer.\n",
+    "> Ne pas confondre l'incertitude-type associée à une mesure avec la résolution de l'appareil de mesure :\n",
+    "> - l'incertitude-type est un ordre de grandeur du domaine de variation de la grandeur (elle variera sur quelques incertitudes-type (voir [Incertitudes expérimentales](https://mybinder.org/v2/gh/peleroy/travauxpratiques/HEAD?labpath=incertitudes_de_mesure.ipynb)) ;\n",
     "> - la résolution de l'appareil de mesure est la plus petite variation de mesure qu'il peut déceler.\n",
     ">\n",
-    "> Ainsi par exemple une règle graduée au mm près a une précision de 1 mm. Mais l'incertitude associée à une mesure avec cette règle est plus faible puisque l'on est systématiquement proche d'une graduation plutôt qu'une autre. On peut l'estimer à $1/\\sqrt 3$ mm (voir [Incertitudes expérimentales](http://leroy.pe.free.fr/psi_new/tp/incertitudes_2p.pdf)).\n",
+    "> Ainsi par exemple une règle graduée au mm près a une précision de 1 mm. Mais l'incertitude associée à une mesure avec cette règle est plus faible puisque l'on est systématiquement proche d'une graduation plutôt qu'une autre. On peut l'estimer à $0,5/\\sqrt 3$ mm.\n",
     "\n",
-    "Pour estimer l'incertitude associée à une mesure, il faut soit :\n",
-    "- l'estimer par vous-même, en justifiant vos choix ;\n",
-    "- avoir des connaissances sur l'appareil de mesure qui a été utilisé : la notice donne souvent cette incertitude.\n",
+    "L'incertitude-type associée à chaque mesure est représentée graphiquement par des barres d'incertitude-type. Pour chaque mesure on peut avoir une double incertitude-type : sur l'ordonnée et sur l'abscisse.\n",
     "\n",
-    "L'incertitude associée à chaque mesure est représentée graphiquement par des barres d'incertitude. Pour chaque mesure on peut avoir une double incertitude : sur l'ordonnée et sur l'abscisse.\n",
-    "\n",
-    "Par exemple si l'incertitude est la même sur chaque mesure :"
+    "Par exemple si l'incertitude-type est la même sur chaque mesure :"
    ]
   },
   {
@@ -279,12 +275,12 @@
     "liste_t=[0,5,10,15,20,25,30,35,40,45,50,55,60,65,70,90,120,150,180]\n",
     "\n",
     "# Incertitudes sur chaque mesure\n",
-    "incert_x=2.0 # Incertitude sur l'abscisse\n",
-    "incert_y=2.5 # Incertitude sur l'ordonnée\n",
+    "incert_x=2.0 # Incertitude-type sur l'abscisse\n",
+    "incert_y=2.5 # Incertitude-type sur l'ordonnée\n",
     "\n",
     "# Représentation graphique\n",
     "plt.figure()\n",
-    "plt.errorbar(liste_t,liste_T,incert_y,incert_x,fmt='r+',ecolor='blue',capsize=2) # Cas d'une incertitude constante\n",
+    "plt.errorbar(liste_t,liste_T,incert_y,incert_x,fmt='r+',ecolor='blue',capsize=2) # Cas d'une incertitude-type constante\n",
     "\n",
     "plt.title('Représentation de T(t)')\n",
     "plt.xlabel('t (s)')\n",
@@ -313,13 +309,13 @@
     "liste_T=[92.6,79.9,71.5,65.2,60.2,55.1,51.2,48,45.5,42.8,40.3,38.3,36.5,34.1,32.8,27.5,22.5,20.3,18.9]\n",
     "liste_t=[0,5,10,15,20,25,30,35,40,45,50,55,60,65,70,90,120,150,180]\n",
     "\n",
-    "# Si les incertitudes ne sont pas les même sur chaque mesure, créer des listes\n",
+    "# Si les incertitudes-type ne sont pas les même sur chaque mesure, créer des listes\n",
     "liste_incert_x=[2.0]*len(liste_t)\n",
     "liste_incert_y=[T*10/100 for T in liste_T]\n",
     "\n",
     "# Représentation graphique\n",
     "plt.figure()\n",
-    "plt.errorbar(liste_t,liste_T,liste_incert_y,liste_incert_x,fmt='r+',ecolor='blue',capsize=2) # Cas d'une incertitude variable\n",
+    "plt.errorbar(liste_t,liste_T,liste_incert_y,liste_incert_x,fmt='r+',ecolor='blue',capsize=2) # Cas d'une incertitude-type variable\n",
     "\n",
     "plt.title('Représentation de T(t)')\n",
     "plt.xlabel('t (s)')\n",
